# tensorrtx

./: .gitignore
arcface/: prelu.cu  prelu.h
psenet/: psenet.cpp
retinaface/: calibrator.h  decode.cu  decode.h  retina_mnet.cpp
xtestnet/: CMakeLists.txt  main.cpp
xtestnet/src/: CustomPlugin.cpp  CustomPlugin.h  CustomPluginS.cpp  CustomPluginS.h  batchTilePlugin.cpp  batchTilePlugin.h  layers.cpp  layers.h  logging.h  mPlugin.cpp  mPlugin.h  utils.cpp  utils.h  xtestnet.cpp  xtestnet.h
yolov3/: yololayer.h  yolov3.cpp
yolov3-tiny/: yololayer.cu
yolov4/: yololayer.cu  yololayer.h
yolov5/: CMakeLists.txt  common.hpp  preprocess.cu  yololayer.cu  yololayer.h
